[bdist_wheel]
universal=1



[metadata]
description-file=README.rst

[flake8]
max-line-length = 120
exclude = .git,.cache,.eggs,__pycache__,venv,.venv,.tox,  docs, setup.py
per-file-ignores =
    # connection.py is not public
    pynso/connection.py: D
    # tests are not public and dont need docs
    tests/*: D
    # Example can print and doesnt need docs
    example.py: T, D
rst-roles =
    attr,class,func,meth,mod,obj,ref,term,data

[tool:pytest]
addopts=--doctest-modules --doctest-ignore-import-errors
testpaths=tests pynso


[mypy]
ignore_missing_imports = True

disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
;check_untyped_defs = True
disallow_untyped_decorators = True


no_implicit_optional = True
strict_optional = True

warn_redundant_casts = True
warn_unused_ignores = True
;warn_return_any = True
warn_no_return = True
warn_unreachable = True

implicit_reexport = False
strict_equality = True

show_error_codes = True
show_column_numbers = True

[mypy-tests.*]
disallow_untyped_calls = False
disallow_untyped_defs = False

[mypy-docs.*]
disallow_untyped_calls = False
disallow_untyped_defs = False
